--- a/gestion-tutorat-front/src/app/components/filtre-etudiants/filtre-etudiants.component.html
+++ b/gestion-tutorat-front/src/app/components/filtre-etudiants/filtre-etudiants.component.html
@@ -1,6 +1,6 @@
 <!-- BOUTON POUR AFFICHER LE FILTRE -->
 <div class="filter-wrapper">
-  <button class="menu-button" (click)="toggleFilter($event)">Filtrer les étudiants</button>
+  <button class="menu-button" (click)="toggleFilter($event)">{{ 'AFFECT_MANUELLE.FILTER_STUDENTS' | translate }}</button>
 
   <!-- PANNEAU FLOTTANT -->
   <div class="floating-panel" *ngIf="testVisible" (click)="$event.stopPropagation()">
@@ -12,10 +12,10 @@
           <label class="checkbox-container">
             <input type="checkbox" [(ngModel)]="showAffectation" name="showAffectation">
             <span class="checkmark"></span>
-            Affectation
+            {{ 'STUDENTS.ASSIGNED' | translate }}
           </label>
           <div *ngIf="showAffectation">
-            <label>Choisir l'affectation :</label>
+            <label>{{ 'STUDENTS.CHOOSE_ASSIGNMENT' | translate }} :</label>
             <select class="form-select" [(ngModel)]="selectedAffectation" name="affectation">
               <option *ngFor="let affectation of affectations" [value]="affectation">{{ affectation }}</option>
             </select>
@@ -27,12 +27,12 @@
           <label class="checkbox-container">
             <input type="checkbox" [(ngModel)]="showNom" name="showNom">
             <span class="checkmark"></span>
-            Nom et Prénom
+            {{ 'COMMON.LASTNAME' | translate }} & {{ 'COMMON.FIRSTNAME' | translate }}
           </label>
           <div *ngIf="showNom">
-            <label>Nom :</label>
+            <label>{{ 'COMMON.LASTNAME' | translate }} :</label>
             <input class="form-control" [(ngModel)]="lastNameFilter" name="lastName" type="text">
-            <label>Prénom :</label>
+            <label>{{ 'COMMON.FIRSTNAME' | translate }} :</label>
             <input class="form-control" [(ngModel)]="firstNameFilter" name="firstName" type="text">
           </div>
         </div>
@@ -42,10 +42,10 @@
           <label class="checkbox-container">
             <input type="checkbox" [(ngModel)]="showdep" name="showdep">
             <span class="checkmark"></span>
-            Code de la classe
+            {{ 'STUDENTS.CLASS_CODE' | translate }}
           </label>
           <div *ngIf="showdep">
-            <label>Code :</label>
+            <label>{{ 'STUDENTS.CODE' | translate }} :</label>
             <select class="form-select" [(ngModel)]="selecteddep" name="codeClasse">
               <option *ngFor="let dep of codes" [value]="dep">{{ dep }}</option>
             </select>
@@ -57,10 +57,10 @@
           <label class="checkbox-container">
             <input type="checkbox" [(ngModel)]="showdepartement" name="showdepartement">
             <span class="checkmark"></span>
-            Département de rattachement
+            {{ 'STUDENTS.DEPARTMENT_ATTACHMENT' | translate }}
           </label>
           <div *ngIf="showdepartement">
-            <label>Département :</label>
+            <label>{{ 'COMMON.DEPARTMENT' | translate }} :</label>
             <select class="form-select" [(ngModel)]="selecteddepartement" name="departement">
               <option *ngFor="let dep of departements" [value]="dep">{{ dep }}</option>
             </select>
@@ -69,8 +69,8 @@
 
         <!-- ACTIONS -->
         <div class="filter-actions">
-          <button type="submit" class="btn btn-outline-primary btn-sm">Appliquer</button>
-          <button type="button" class="btn btn-outline-dark btn-sm" (click)="reinitialiser()">Réinitialiser</button>
+          <button type="submit" class="btn btn-outline-primary btn-sm">{{ 'COMMON.SEARCH' | translate }}</button>
+          <button type="button" class="btn btn-outline-dark btn-sm" (click)="reinitialiser()">{{ 'COMMON.RESET' | translate }}</button>
         </div>
 
       </div>
